--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.1",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
