--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vitejs/plugin-react": "^4.1.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "framer-motion": "^10.16.4",
+    "lodash": "^4.17.21",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
