--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@types/lodash.merge": "^4.6.7",
     "@types/node": "^20.8.6",
     "@vitejs/plugin-react": "^4.1.0",
+    "date-fns": "^2.30.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "framer-motion": "^10.16.2",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
     "styled-components": "^6.1.0"
@@ -40,6 +42,7 @@
     "@iconify/react": "^4.1.1",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@types/react-lazy-load-image-component": "^1.6.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
